package main

import (
	"context"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"

	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"

	po "github.com/Denisz0785/spaceyard/shared/pkg/proto/payment/v1"
)

const (
	port = "localhost:8081"
)

type server struct {
	po.UnimplementedPaymentServiceServer
}

func NewServer() *server {
	return &server{
		UnimplementedPaymentServiceServer: po.UnimplementedPaymentServiceServer{},
	}
}

// PayOrder is doing payment
func (p server) PayOrder(ctx context.Context, req *po.PayOrderRequest) (*po.PayOrderResponse, error) {
	transactionUUID := uuid.New().String()

	// –õ–æ–≥–∏—Ä—É–µ–º –ø–æ–ª—É—á–µ–Ω–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ –¥–ª—è –ø–æ–ª–Ω–æ—Ç—ã –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∑–∞–ø—Ä–æ—Å–∞
	log.Printf(
		"–ü–æ–ª—É—á–µ–Ω –∑–∞–ø—Ä–æ—Å –Ω–∞ –æ–ø–ª–∞—Ç—É: OrderUUID=[%s], UserUUID=[%s], PaymentMethod=[%s]",
		req.GetOrderUuid(),
		req.GetUserUuid(),
		req.GetPaymentMethod().String(),
	)

	log.Printf("–û–ø–ª–∞—Ç–∞ –ø—Ä–æ—à–ª–∞ —É—Å–ø–µ—à–Ω–æ, transaction_uuid: %s", transactionUUID)

	return &po.PayOrderResponse{TransactionUuid: transactionUUID}, nil
}

func main() {
	lis, err := net.Listen("tcp", port)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	srv := NewServer()

	po.RegisterPaymentServiceServer(s, srv)

	// –í–∫–ª—é—á–∞–µ–º —Ä–µ—Ñ–ª–µ–∫—Å–∏—é –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	reflection.Register(s)

	go func() {
		log.Printf("server listening at %v", lis.Addr())
		if err := s.Serve(lis); err != nil {
			log.Fatalf("failed to serve: %v", err)
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üõë Shutting down servers...")

	// –í –∫–æ–Ω—Ü–µ –æ—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	s.GracefulStop()
	log.Println("‚úÖ gRPC server stopped")
}
